--- a/aboutus.html
+++ b/aboutus.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link href="css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <link href="css/styles.css" rel="stylesheet">
     <title>Le Chocolat</title>
 
 </head>
@@ -25,13 +26,13 @@
                         <a class="nav-link" href="./index.html"> <span class="fa fa-home fa-lg"></span>Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#"><span class="fa fa-info fa-lg"></span> About</a>
+                        <a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span>Contact</a>
+                        <a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span>Contact</a>
                     </li>
                 </ul>
             </div>
@@ -159,10 +160,10 @@
                 <div class="col-5 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./aboutus.html">About</a></li>
                         <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5">
@@ -173,7 +174,7 @@
                         HAWAII<br>
                         <i class="fa fa-phone fa-lg"></i>: +987 6543 2100 <br>
                         <i class="fa fa-fax fa-lg"></i>: +987 6543 2101 <br>
-                        <i class="fa fa-envelope fa-lg"></i>: <a href="mailto: chocolat@nomail.net">
+                        <i class="fa fa-envelope fa-lg"></i>: <a href="mailto: chocolat@nomail.net"> 
                             chocolat@nomail.net </a>
                     </address>
                 </div>
