--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
+    <!-- Required meta tags always come first -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link href="css/styles.css" rel="stylesheet">
@@ -13,52 +15,71 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top ">
+
+    <!-- NAVIGATION -->
+    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="./index.html"><img src="images/logo.png" height="40" width="54"></a>
+            <!-- <a class="navbar-brand" href="#">Le Chocolat</a> -->
+            <a class="navbar-brand" href="./index.html">
+                <img src="images/logo.png" height="40" width="54">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a>
+                        <a class="nav-link" href="./index.html">
+                            <span class="fa fa-home fa-lg"></span> Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a>
+                        <a class="nav-link" href="./aboutus.html">
+                            <span class="fa fa-info fa-lg"></span> About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
+                        <a class="nav-link" href="#">
+                            <span class="fa fa-list fa-lg"></span> Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a>
+                        <a class="nav-link" href="./contactus.html">
+                            <span class="fa fa-address-card fa-lg"></span> Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
+    <!-- HEADER -->
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
+
                 <div class="col-12 col-sm-8">
                     <h1>Le Chocolat</h1>
                     <p>We combine experience with creativity to create innovative tastes based on classic chocolate
                         recipes. Our creations will travel you in the chocolate world!</p>
                 </div>
+
                 <div class="col col-sm">
                     <img src="images/logo.png" class="img-fluid">
                 </div>
+
             </div>
         </div>
     </header>
 
+    <!-- MAIN CONTENT -->
     <div class="container">
+
+        <!-- 1st Row -->
         <div class="row flex-row-reverse row-content align-items-center">
+            <!-- first row content-->
             <div class="col-sm-4 col-md-3">
                 <h3>Our famous chocolates</h3>
             </div>
             <div class="col-sm col-md">
+                <!-- <h2>85% DARK CHOCOLATE</h2>
+                <p>Dark chocolate with no added sugar. Here you can taste the flavor of cocoa beans.</p> -->
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/dark85.jpg" alt="85% DARK CHOCOLATE">
                     <div class="media-body">
@@ -73,8 +94,9 @@
             </div>
         </div>
 
-
+        <!-- 2nd Row -->
         <div class="row flex-row-reverse row-content align-items-center">
+            <!-- second row content-->
             <div class="col-sm-4 col-md-3">
                 <h3>WEEK’S OFFER</h3>
             </div>
@@ -86,17 +108,25 @@
                             <span class="badge badge-danger">NEW</span>
                             <span class="badge badge-pill badge-success">$4.99</span>
                         </h2>
-                        <p class="col d-none d-md-block">This week we offer a basket with 10 delicious chocolates! </p>
+                        <p class="col d-none d-md-block">This week we offer a basket with 10 delicious chocolates!</p>
                     </div>
                 </div>
+                <!--                 <h2>Our basket</h2>
+                <p>This week we offer a basket with 10 delicious chocolates! </p> -->
             </div>
         </div>
 
+        <!-- 3rd Row -->
         <div class="row flex-row-reverse row-content align-items-center">
+            <!-- third row content-->
             <div class="col-sm-4 col-md-3">
                 <h3>Meet our Specialists</h3>
             </div>
             <div class="col-sm col-md">
+                <!-- <h2>Vasilis Wilson </h2>
+                <h4>Sous-chef</h4>
+                <p>Vasilis is well informed of all the current trends in pastry and contributes his innovative ideas in
+                    our products.</p> -->
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/cartoonVasilis.png" alt="Vasilis Wilson">
                     <div class="media-body">
@@ -107,8 +137,88 @@
                 </div>
             </div>
         </div>
+        
+        <!--4th row-->
+        <div class="row row-content justify-content-center align-items-center">
+            <div class="col col-sm-8 col-12 ">
+                <div class="card mb-3">
+                    <div class="card-header bg-warning">Reserve your baskets</div>
+                    <div class="card-body">
+                        <form action="">
+                            <div class="form-group row">
+                                <div class="col-sm-3">
+                                    <label for="radiobtn">Number of baskets</label>
+                                </div>
+
+                                <div class="col-sm-9">
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" name="optradio">1
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" name="optradio">2
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline ">
+                                        <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" name="optradio">3
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" name="optradio">4
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" name="optradio">5
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline ">
+                                        <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" name="optradio">6
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <p class="col-sm-3">Date and Time</p>
+                                <div class="input-group col-sm-4">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-calendar" aria-hidden="true"></i></span>
+                                    </div>
+                                    <input type="date" class="form-control" placeholder="Date" id="date" name="date">
+                                </div>
+
+                                <div class="input-group col-sm-4">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text"><i class="fa fa-clock-o" aria-hidden="true"></i></span>
+                                    </div>
+                                    <input type="time" class="form-control" placeholder="Time" id="time" name="time">
+
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <div class="col-sm-3">
+                                    <input type="submit" class="btn btn-primary" value="Reserve">
+
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 
+
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -129,12 +239,13 @@
                         HAWAII<br>
                         <i class="fa fa-phone fa-lg"></i>: +987 6543 2100 <br>
                         <i class="fa fa-fax fa-lg"></i>: +987 6543 2101 <br>
-                        <i class="fa fa-envelope fa-lg"></i>: <a href="mailto: chocolat@nomail.net">
-                            chocolat@nomail.net </a>
+                        <i class="fa fa-envelope fa-lg"></i>:
+                        <a href="mailto: chocolat@nomail.net"> chocolat@nomail.net </a>
                     </address>
                 </div>
                 <div class="col col-sm-4 align-self-center">
-                    <div class="col-auto" style="text-align:center">
+                    <div style="text-align:center" class="col-auto">
+
                         <a class="btn btn-social-icon btn-google-plus" href="http://google.com/+">
                             <i class="fa fa-google-plus"></i></a>
                         <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id=">
@@ -158,6 +269,7 @@
         </div>
     </footer>
 
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
