--- a/index.html
+++ b/index.html
@@ -52,16 +52,20 @@
     <!-- HEADER -->
     <header class="jumbotron">
         <div class="container">
-            <div class="row row-header">
+            <div class="row row-header align-items-center">
 
-                <div class="col-12 col-sm-8">
+                <div class="col-12 col-sm-6">
                     <h1>Le Chocolat</h1>
                     <p>We combine experience with creativity to create innovative tastes based on classic chocolate
                         recipes. Our creations will travel you in the chocolate world!</p>
                 </div>
 
-                <div class="col col-sm">
+                <div class="col col-sm-3">
                     <img src="images/logo.png" class="img-fluid">
+                </div>
+
+                <div class="col col-sm-3">
+                    <a class="btn btn-sm btn-warning" href="#bskt">Reserve your baskets</a>
                 </div>
 
             </div>
@@ -139,7 +143,7 @@
         </div>
         
         <!--4th row-->
-        <div class="row row-content justify-content-center align-items-center">
+        <div class="row row-content justify-content-center align-items-center" id="bskt">
             <div class="col col-sm-8 col-12 ">
                 <div class="card mb-3">
                     <div class="card-header bg-warning">Reserve your baskets</div>
