--- a/index.html
+++ b/index.html
@@ -27,45 +27,98 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="Navbar">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav mr-auto">
+
                     <li class="nav-item active">
-                        <a class="nav-link" href="./index.html">
-                            <span class="fa fa-home fa-lg"></span> Home</a>
+                        <a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="./aboutus.html">
-                            <span class="fa fa-info fa-lg"></span> About</a>
+                        <a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span class="fa fa-list fa-lg"></span> Menu</a>
+                        <a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="./contactus.html">
-                            <span class="fa fa-address-card fa-lg"></span> Contact</a>
+                        <a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span>
+                            Contact</a>
                     </li>
                 </ul>
+
+                <span class="navbar-text">
+                    <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal"><span class="fa fa-sign-in"></span> Login</a>
+                </span>
+
             </div>
         </div>
     </nav>
+
+    <!-- MODAL -->
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times</button>
+                </div>
+                <div class="modal-body">
+                    <form class="form-inline">
+                        <div class="form-group">
+                            <label class="sr-only" for="exampleInputEmail3">Email address
+                            </label>
+                            <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3"
+                                placeholder="Enter email">
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="exampleInputPassword3">Password
+                            </label>
+                            <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3"
+                                placeholder="Password">
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="checkbox">Remember me
+                            </label>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel
+                    </button>
+                    <button type="submit" class="btn btn-primary btn-sm">
+                        Sign in
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- HEADER -->
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header align-items-center">
 
+                <!-- MOTO -->
                 <div class="col-12 col-sm-6">
                     <h1>Le Chocolat</h1>
                     <p>We combine experience with creativity to create innovative tastes based on classic chocolate
                         recipes. Our creations will travel you in the chocolate world!</p>
                 </div>
 
+                <!-- LOGO -->
                 <div class="col col-sm-3">
                     <img src="images/logo.png" class="img-fluid">
                 </div>
 
-                <div class="col col-sm-3">
-                    <a class="btn btn-sm btn-warning" href="#bskt">Reserve your baskets</a>
+                <!-- RESERVE YOUR BASKETS -->
+                <div class="col col-sm-2">
+                    <a type="button" class="btn btn-warning btn-sm btn-block" data-toggle="tooltip" data-html="true"
+                        title="Or Call us at <br><strong>+ 987 6543 2100</strong>" data-placement="bottom" href="#bskt">
+                        Reserve your baskets
+                    </a>
                 </div>
 
             </div>
@@ -141,7 +194,7 @@
                 </div>
             </div>
         </div>
-        
+
         <!--4th row-->
         <div class="row row-content justify-content-center align-items-center" id="bskt">
             <div class="col col-sm-8 col-12 ">
@@ -217,8 +270,6 @@
                 </div>
             </div>
         </div>
-
-
     </div>
 
 
@@ -278,6 +329,11 @@
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
 </body>
 
 </html>
