giannis menu file

--- a/contactus.html
+++ b/contactus.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!-- NAVIGATION -->
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="./index.html"><img src="images/logo.png" height="40" width="54"></a>
@@ -43,6 +44,7 @@
         </div>
     </nav>
 
+    <!-- HEADER -->
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -58,13 +60,18 @@
         </div>
     </header>
 
+    <!-- MAIN CONTENT -->
     <div class="container">
+        
+        <!-- BREADCRUMB -->
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Contact us</li>
             </ol>
         </nav>
+
+        <!-- HEADER ROW -->
         <div class="row row-header">
             <div class="col-12">
                 <h3>Contact Us</h3>
@@ -72,6 +79,7 @@
             </div>
         </div>
 
+        <!-- 1st ROW -->
         <div class="row row-content">
             <div class="col-12">
                 <h3>Location Information</h3>
@@ -101,6 +109,7 @@
             </div>
         </div>
 
+        <!-- 2nd ROW -->
         <div class="row row-content">
             <div class="col-12">
                 <h3>Send us your Feedback</h3>
@@ -172,6 +181,7 @@
 
     </div>
 
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="container">
             <div class="row">
