--- a/aboutus.html
+++ b/aboutus.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!-- NAVIGATION -->
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top ">
         <div class="container">
             <a class="navbar-brand" href="./index.html"><img src="images/logo.png" height="40" width="54"></a>
@@ -40,6 +41,7 @@
         </div>
     </nav>
 
+    <!-- HEADER -->
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -55,13 +57,18 @@
         </div>
     </header>
 
+    <!-- MAIN CONTENT -->
     <div class="container">
+
+        <!-- BREADCRUMB -->
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
                 <li class="breadcrumb-item active" aria-current="page">About us</li>
             </ol>
         </nav>
+
+        <!-- 1st ROW -->
         <div class="row">
             <div class="col-12">
                 <h3>About Us</h3>
@@ -69,6 +76,7 @@
             </div>
         </div>
 
+        <!-- 2nd ROW -->
         <div class="row">
             <div class="col-12 col-sm-6">
                 <h2>Our History</h2>
@@ -98,7 +106,7 @@
             </div>
         </div>
 
-
+        <!-- 3rd ROW -->
         <div class="row">
             <div class="col-12">
                 <h2>Corporate Leadership</h2>
@@ -206,6 +214,7 @@
             </div>
         </div>
 
+        <!-- 4th ROW -->
         <div class="row row-content">
             <div class="col-12 col-sm-9">
                 <h2> Create your milk chocolate!</h2>
@@ -245,6 +254,7 @@
 
     </div>
 
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="container">
             <div class="row">
