--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/cartoonVasilis.png" alt="Vasilis Wilson">
                     <div class="media-body">
-                        <h2 class="mt-0">Vasilis Wilson</h2>
-                        <p class="col d-none d-md-block">Vasilis is well informed of all the current
-                            trends in pastry and contributes his innovative ideas in our products.</p>
+                        <h2 class="mt-0">Giannis Stergiou</h2>
+                        <p class="col d-none d-md-block">Giannis is well informed of all the current
+                            trends in programming and contributes his innovative ideas in our products.</p>
                     </div>
                 </div>
             </div>
